--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,22 +6,19 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChessProject">
         <activity
             android:name=".ChessBoardActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity4"
+            android:name=".PrevActivity"
             android:exported="false" />
         <activity
-            android:name=".ActivityThree"
-            android:exported="false" />
-        <activity
-            android:name=".ActivityTwo"
+            android:name=".ScanActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
